chore: update dependencies, fonts, and theme config
	- Updated all dependencies to the latest stable versions.
	- Switched to Astro’s official font optimization for faster load times.
	- Improved type support in the theme configuration for fewer errors.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "folex-lite-astro",
   "type": "module",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "A highly customizable creative agency & personal portfolio business theme built with Tailwind CSS and Astro Js",
   "author": "getastrothemes",
   "license": "SEE LICENSE IN LICENSE.md",
-  "packageManager": "pnpm@8.15.5",
   "private": true,
   "keywords": [
     "astro",
@@ -16,68 +15,65 @@
     "type": "git",
     "url": "https://github.com/getastrothemes/folex-lite-astro.git"
   },
-  "engines": {
-    "node": ">=18.20.8 <19 || >=20.3.0 <21 || >=22.0.0",
-    "npm": ">=9.6.7",
-    "pnpm": ">=8.15.5",
-    "yarn": ">=1.22.22"
-  },
   "scripts": {
-    "dev": "astro dev",
-    "preview": "astro build && npm run remove-draft-from-sitemap && astro preview",
-    "build": "npm run check && astro build && npm run remove-draft-from-sitemap",
-    "check": "astro check",
-    "format": "prettier --write ./src",
+    "dev": "npm run toml:watch & astro dev",
+    "toml:watch": "node scripts/toml-watcher.mjs",
+    "build": "npm run toml:watch & astro build && npm run remove-draft-from-sitemap",
+    "preview": "npm run toml:watch & astro build && npm run remove-draft-from-sitemap && astro preview",
+    "astro-check": "npm run toml:watch & astro check",
     "generate-favicons": "node ./scripts/generate-favicons.mjs",
     "remove-multilingual": "node ./scripts/remove-multilingual.mjs",
-    "remove-draft-from-sitemap": "node ./scripts/remove-draft-from-sitemap.mjs"
+    "remove-draft-from-sitemap": "node ./scripts/remove-draft-from-sitemap.mjs",
+    "format": "prettier -w ./src"
+  },
+  "engines": {
+    "node": ">=18.20.8 <19 || >=20.3.0 <21 || >=22.0.0"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.3.1",
-    "@astrojs/react": "^4.3.0",
-    "@astrojs/sitemap": "^3.4.1",
-    "@floating-ui/dom": "^1.7.2",
+    "@floating-ui/dom": "^1.7.4",
     "@popperjs/core": "^2.11.8",
-    "@preline/accordion": "^3.0.0",
-    "@preline/collapse": "^3.0.0",
-    "@preline/overlay": "^3.0.0",
-    "@preline/select": "^3.0.0",
-    "@tailwindcss/vite": "^4.1.11",
+    "@preline/accordion": "^3.2.3",
+    "@preline/collapse": "^3.2.3",
+    "@preline/overlay": "^3.2.3",
+    "@preline/select": "^3.2.3",
     "aos": "^2.3.4",
-    "astro": "^5.12.0",
-    "astro-font": "^1.1.0",
     "date-fns": "^4.1.0",
-    "gray-matter": "^4.0.3",
-    "marked": "^16.1.1",
-    "preline": "^3.0.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.0.1",
-    "rehype-external-links": "^3.0.0",
-    "remark-toc": "^9.0.0",
-    "sharp": "0.33.2",
+    "marked": "^17.0.1",
+    "preline": "^3.2.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-icons": "^5.5.0",
     "smoothscroll-for-websites": "^1.5.1",
-    "swiper": "^11.2.10",
-    "toml": "^3.0.0",
-    "unist-util-visit": "^5.0.0",
-    "xml2js": "^0.6.2",
-    "zod": "3.25.76"
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
-    "@realfavicongenerator/generate-favicon": "^0.4.6",
-    "@realfavicongenerator/image-adapter-node": "^0.4.6",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "prettier": "^3.6.2",
+    "@astrojs/check": "^0.9.6",
+    "@astrojs/mdx": "^4.3.13",
+    "@astrojs/react": "^4.4.2",
+    "@astrojs/sitemap": "^3.7.0",
+    "@realfavicongenerator/generate-favicon": "^0.6.0",
+    "@realfavicongenerator/image-adapter-node": "^0.6.1",
+    "@tailwindcss/forms": "^0.5.11",
+    "@tailwindcss/typography": "^0.5.19",
+    "@tailwindcss/vite": "^4.1.18",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
+    "astro": "^5.16.11",
+    "astro-font": "^1.1.0",
+    "gray-matter": "^4.0.3",
+    "prettier": "^3.8.0",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.13",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "prettier-plugin-toml": "^2.0.6",
+    "rehype-external-links": "^3.0.0",
+    "remark-toc": "^9.0.0",
+    "sharp": "^0.34.5",
     "slugify": "^1.6.6",
-    "tailwindcss": "^4.1.11",
-    "typescript": "^5.7.3"
+    "tailwindcss": "^4.1.18",
+    "toml": "^3.0.0",
+    "typescript": "^5.9.3",
+    "unist-util-visit": "^5.0.0",
+    "xml2js": "^0.6.2"
   },
   "resolutions": {
     "sharp": "^0.33.2",
